# lib_plugins

./: CMakeLists.txt  FindMailIO.cmake  README.md
plugins/: AppManager.cc  AppManager.h  ChatManager.cc  ChatManager.h  Configurator.cc  Configurator.h  HandlerManager.cc  HandlerManager.h  PlayManager.cc  PlayManager.h  StreamManager.cc  StreamManager.h  UserManager.cc  UserManager.h
strategies/: actions.h
strategies/app/: CreateAccount.cc  CreateAccount.h  GetAppVersion.cc  GetAppVersion.h  GetNotice.cc  GetNotice.h  GetUserCount.cc  GetUserCount.h  ValidateAccount.cc  ValidateAccount.h
strategies/base/: MessageHandler.h
strategies/chat/: EnterChannel.cc  EnterChannel.h  GetChannelList.cc  GetChannelList.h  LeaveChannel.cc  LeaveChannel.h  PublishChatMessage.cc  PublishChatMessage.h
strategies/manage/: GetConnectionInfo.cc  GetConnectionInfo.h  GetGenericInfo.cc  GetGenericInfo.h  GetPlayManagerStatus.cc  GetPlayManagerStatus.h  GetStreamManagerStatus.cc  GetStreamManagerStatus.h  PublishMessage.cc  PublishMessage.h  Shutdown.cc  Shutdown.h
strategies/play/: ChangeConfig.cc  ChangeConfig.h  ChangeMode.cc  ChangeMode.h  ChangeReady.cc  ChangeReady.h  CreateRoom.cc  CreateRoom.h  EnterRoom.cc  EnterRoom.h  GetRoomList.cc  GetRoomList.h  LeaveRoom.cc  LeaveRoom.h  PublishPlayMessage.cc  PublishPlayMessage.h
strategies/stream/: PublishDeathData.cc  PublishDeathData.h  PublishStreamData.cc  PublishStreamData.h
strategies/user/: DownloadData.cc  DownloadData.h  GetAccessToken.cc  GetAccessToken.h  GetUserInfo.cc  GetUserInfo.h  UploadData.cc  UploadData.h
